src/objects/Training_Event__c.object
<CustomObject>
    <fields>
        <fullName>AM_Client_Follow_up__c</fullName>
        <inlineHelpText>Follow up with the Client to get feedback on the seminar. Within 24 hours of completion of training.</inlineHelpText>
        <label>AM Client Follow up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Locations_Verification__c</fullName>
        <inlineHelpText>Confirm Shipping Information and Training Location is CORRECT. 1 month before seminar date.</inlineHelpText>
        <label>AM Locations Verification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Prep_Trainer__c</fullName>
        <inlineHelpText>Prep Trainer for Tailoring Call. Within 1 week of confirmation that the trainer has been scheduled.</inlineHelpText>
        <label>AM Prep Trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Tailoring_Call__c</fullName>
        <inlineHelpText>Confirm Tailoring Call is Complete. 2 weeks prior to the seminar date.</inlineHelpText>
        <label>AM Tailoring Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Thank_You_Card__c</fullName>
        <inlineHelpText>Send Thank You Card. Within 48 hours of completion of the training.</inlineHelpText>
        <label>AM Thank You Card</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Trainer_Follow_Up__c</fullName>
        <inlineHelpText>Follow up with the Trainer to get feedback on the seminar. Within 24 hours of completion of training.</inlineHelpText>
        <label>AM Trainer Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Wkbk_Confirmation__c</fullName>
        <inlineHelpText>Call client to confirm workbooks have been received, and are correct. (Must check total number received and workbook title). Re-confirm training location. 5 days prior to the seminar date.</inlineHelpText>
        <label>AM Wkbk Confirmation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Workbook_Confirmation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Workbook Confirmation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Level_Travel_Notes__c</fullName>
        <formula>Account__r.Account_Level_Travel_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Level Travel Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Airport_Drive_time__c</fullName>
        <inlineHelpText>Driving time from airport to training site</inlineHelpText>
        <label>Airport Drive-time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_of_each_SkillCheck__c</fullName>
        <label>Amount of each SkillCheck</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Event_Price__c</fullName>
        <inlineHelpText>Calculating from the Topics Total Price field</inlineHelpText>
        <label>Base Event Price</label>
        <summarizedField>Topic__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Topic__c.Training_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billed_Hard_Expenses_Local_Currency__c</fullName>
        <formula>IF(Invoice_Hard_Expenses__c,
Hard_Expenses_USD__c / Conversion_Rate__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billed Hard Expenses (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Billing Contact)</relationshipLabel>
        <relationshipName>Training_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Currency</label>
        <referenceTo>Currency_Detail__c</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <inlineHelpText>If the Event status is cancelled, please provide the date cancelled.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>From the Opportunity Record</inlineHelpText>
        <label>Cancellation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Amount__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Cancelled&quot;) ,  (TE_Contract_Amount__c -  Cancellation_Fee__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Webinar_Platform__c</fullName>
        <label>Webinar Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Combined_Billing_Invoicing__c</fullName>
        <formula>&apos;Account: &apos; &amp;  Account__r.Account_Specific_Billing_Invoicing__c  &amp;
BR() &amp;
&apos;DM: &apos; &amp; Decision_Maker__r.Contact_Specific_Billing_Invoicing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Billing &amp; Invoicing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_NDA_Received_Date__c</fullName>
        <formula>&apos;Account: &apos; &amp; text (  Account__r.NDA_Received_Date__c  )
&amp;  BR() &amp;
&apos;DM: &apos; &amp; text (Decision_Maker__r.NDA_Received_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined NDA Received Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Payable_Period_new__c</fullName>
        <formula>&apos;Account: &apos; &amp;  text (    Account__r.Payable_Period__c   )
&amp;  BR() &amp;
&apos;DM: &apos; &amp; ( Decision_Maker__r.Contact_Specific_Payable_Period__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Payable Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Scheduling_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp;  Account__r.Scheduling_Notes__c  &amp; 
BR() &amp; 
&apos;DM: &apos; &amp;  Decision_Maker__r.Contact_Specific_Scheduling_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Scheduling Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Tax_Exempt_No__c</fullName>
        <formula>&apos;Account: &apos; &amp;  (   Account__r.Tax_Exempt_No__c   )
&amp;  BR() &amp;
&apos;DM: &apos; &amp; (  Decision_Maker__r.Tax_Exempt_No__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Tax Exempt #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Trainer_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp;  (   Account__r.Trainer_Notes__c   )
&amp;  BR() &amp;
&apos;DM: &apos; &amp; (  Decision_Maker__r.Contact_Specific_Trainer_Notes__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Trainer Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combined_Travel_Notes__c</fullName>
        <formula>&apos;Account: &apos; &amp;  (   Account__r.Account_Level_Travel_Notes__c   )
&amp;  BR() &amp;
&apos;DM: &apos; &amp; (  Decision_Maker__r.Contact_Specific_Travel_Notes__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Travel Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_call_date__c</fullName>
        <formula>Training_Start_Date__c-28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmation call date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Call_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmation Call Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmation_Call_Date__c</fullName>
        <label>Confirmation Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Call_Notes__c</fullName>
        <label>Confirmation Call Notes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Call_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Confirmation Call Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Team__c</field>
                <operation>equals</operation>
                <value>Contracts, Faculty, Ops, Scheduling</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Events3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <inlineHelpText>From Opportunity Record</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_per_Additional_Attendee__c</fullName>
        <inlineHelpText>From Opportunity Record</inlineHelpText>
        <label>Cost per Additional Attendee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_specific_LOA_verbiage__c</fullName>
        <formula>&apos;Account: &apos; &amp; Account__r.Entity_specific_LOA_verbiage__c &amp;
BR() &amp;
&apos;DM: &apos; &amp; Decision_Maker__r.Contact_Specific_LOA_Verbiage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined LOA verbiage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Options_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Options Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Options__c</fullName>
        <label>Date Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <inlineHelpText>Date box(es) were shipped.</inlineHelpText>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SkillChecks_Requested__c</fullName>
        <label>Date SkillChecks Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SkillChecks_Sent__c</fullName>
        <label>Date SkillChecks Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Sold__c</fullName>
        <formula>IF( Training_Start_Date__c  &lt; TODAY(),  Training_Start_Date__c -  DATEVALUE(CreatedDate) , TODAY()- DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the training performs, calculate training start date minus Close Date. Until the start date, track days since sold.</inlineHelpText>
        <label>Days Since Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Email__c</fullName>
        <formula>Decision_Maker__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_First_Name__c</fullName>
        <formula>Decision_Maker__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_Last_Name__c</fullName>
        <formula>Decision_Maker__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From Opportunity Record</inlineHelpText>
        <label>Decision Maker</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_specific_LOA_verbiage__c</fullName>
        <formula>Account__r.Entity_specific_LOA_verbiage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity-specific LOA verbiage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Billing_Notes__c</fullName>
        <label>Event Billing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_specific_Trainer_Notes__c</fullName>
        <label>Event-specific Trainer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Session_Notes__c</fullName>
        <label>Training Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hard_Expenses_USD__c</fullName>
        <label>Hard Expenses (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Trainer_Fee__c</fullName>
        <formula>Trainer_Assigned__r.Individual_Trainer_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual Trainer Fee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Invoice_Date__c</fullName>
        <label>Initial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Shipping_Notes__c</fullName>
        <description>Shipping Notes visible only to Operations. For internal use only.</description>
        <inlineHelpText>Shipping Notes visible only to Operations. For internal use only.</inlineHelpText>
        <label>Internal Shipping Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Hard_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Hard Expenses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOA Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Team__c</field>
                <operation>equals</operation>
                <value>Ops</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOA_Pending_Approval__c</fullName>
        <label>LOA Pending Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOA_Sent_Date__c</fullName>
        <label>LOA Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_OSM_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy OSM ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logistical_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistical Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Logistical Contact)</relationshipLabel>
        <relationshipName>Training_Events5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logistical_Contact__c</fullName>
        <formula>Opportunity__r.Logistical_Contact__r.FirstName &amp; 
&quot; &quot; &amp;  Opportunity__r.Logistical_Contact__r.LastName &amp; 
&quot; &quot; &amp;  Opportunity__r.Logistical_Contact__r.Email &amp; 
&quot; &quot; &amp;  Opportunity__r.Logistical_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logistical Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Attendees__c</fullName>
        <description>Please enter the maximum number of attendees for this event. Additional attendees will need to be charged as a separate line item.</description>
        <inlineHelpText>Please enter the maximum number of attendees for this event. Additional attendees will need to be charged as a separate line item.</inlineHelpText>
        <label>Max # Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDA_Received_Date__c</fullName>
        <formula>Decision_Maker__r.NDA_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NDA Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Commissionable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to denote a TE where the Opportunity was Closed Won by a former rep and so the new rep should not receive commission.</description>
        <inlineHelpText>Check this box if the Opportunity was Closed Won by a former employee and is now being fulfilled by a different Rep who will not receive commission for this TE.</inlineHelpText>
        <label>Non-Commissionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_SkillChecks_Requested__c</fullName>
        <label># SkillChecks Requested</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Non_Standard_Workbooks__c</fullName>
        <label># of Non-Standard Workbooks</label>
        <summaryFilterItems>
            <field>Topic__c.Workbook_Location__c</field>
            <operation>notContain</operation>
            <value>warehouse</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Topic__c.Workbook_Location__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Topic__c.Training_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Selected_Topics__c</fullName>
        <label>Number of Selected Topics</label>
        <summaryForeignKey>Topic__c.Training_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Training__c</fullName>
        <label>Number of Training</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Description__c</fullName>
        <label>Opportunity Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <formula>Opportunity__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Phone__c</fullName>
        <formula>Opportunity__r.Owner.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Title__c</fullName>
        <formula>Opportunity__r.Owner.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName  &amp; &quot; &quot; &amp;   Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Name__c</fullName>
        <label>xOpportunity Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.Legacy_Record_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Training Events</relationshipLabel>
        <relationshipName>Training_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_TE_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original TE Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Events_TE_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <inlineHelpText>From Opportunity Record</inlineHelpText>
        <label>PO Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPT_sent_to_Trainer__c</fullName>
        <label>PPT sent to Trainer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payable_Period__c</fullName>
        <inlineHelpText>From Opportunity record</inlineHelpText>
        <label>Payable Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projector_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Projector Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter_Performed__c</fullName>
        <inlineHelpText>Filled in by workflow when the event date is passed and the status is completed</inlineHelpText>
        <label>Quarter Performed</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_To_Ship__c</fullName>
        <inlineHelpText>Indicates that the shipping information is correct and that the workbooks are ready to ship.</inlineHelpText>
        <label>Ready To Ship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommended_Hotel__c</fullName>
        <label>Hotel Recommendation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Tax_Rate__c</fullName>
        <description>Training Location Tax</description>
        <inlineHelpText>Training Location Tax from Opportunity Record</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STAR12_Eligible__c</fullName>
        <formula>Account__r.STAR12_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STAR12 Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STAR12_Invoice_Num__c</fullName>
        <label>STAR12 Invoice #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduling_Deadline__c</fullName>
        <label>Scheduling Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduling_Detail__c</fullName>
        <label>Scheduling Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduling_Notes__c</fullName>
        <formula>Account__r.Scheduling_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Specific Scheduling Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduling_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.User_Team__c</field>
                <operation>equals</operation>
                <value>Ops, Faculty</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_Printer__c</fullName>
        <inlineHelpText>The date an &quot;on demand&quot; workbook order is sent to the printer for this Training Event.</inlineHelpText>
        <label>Sent to Printer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Attention_Line__c</fullName>
        <label>Shipping Attention Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Comments__c</fullName>
        <label>Shipping Comments</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Events (Shipping Contact)</relationshipLabel>
        <relationshipName>Training_Events2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>